introduce more convenient getList/setList
GitOrigin-RevId: 84d44e2053b422fc8791ffe445865e4b4f48e2c3